css/main.css
html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
}

html {
  font-size: 100%;
}

body {
  line-height: 1.5;
  margin: 0 10% 0 10%;
  font-family: 'Merriweather', serif;
}

.wrapper {
  min-width: 300px;
  max-width: 400px;
}

.content1 .content2 {
  display: grid;
  gap: 1rem;
}

.content3 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
}

.names {
  grid-column: 1;
}

.img34 {
  display: grid;
  gap: 1rem;
  grid-column: 2;
}

img {
  display: block;
  width: 100%;
}

section img {
  border: .2rem solid black;
  border-radius: .3rem;
}

.wrapper {
  max-width: 400px;
  margin: 0 auto;
}

header {
  display: flex;
  flex-direction: column;
}

header nav ul {
  justify-content: center;
  list-style-type: none;
  display: flex;
  gap: 1.5rem;
}

header nav ul li a {
  font-family: "Lato";
  color: #000;
  font-weight: bold;
  text-decoration: none;
  font-size: 1.25rem;
  padding: 0 auto;
}

header nav ul li a:hover,
header nav ul li a:focus {
  text-decoration: underline;
}

span {
  font-family: "Lato";
  font-size: 2rem;
  font-weight: bold;
}

.button {
  font-family: "Lato";
  border: .2rem solid black;
  padding: .5em 1em .6em;
  margin: 0.5rem 0 0 0;
  border-radius: .3rem;
  text-align: center;
  background-color: green;
}

.button a {
  color: #fff;
  font-weight: bold;
  font-size: 1.25rem;
  text-decoration: none;
}

.button a:hover {
  text-decoration: underline;
  font-size: 1.5rem;
}

ul {
  font-size: .75rem;
}

ul p {
  font-weight: bold;
}

dt {
  font-size: .75rem;
  font-weight: bold;
}

dd {
  font-size: .75rem;
}

h1 h2 h3 h4{
  margin: 1.5rem 0 0 0;
}

p {
  margin: 0.5rem 0 0 0;
}

.browsed {
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 0 auto;
  gap: 1rem;
}

.reviews {
  display: grid;
  gap: 1rem;
}

figure {
  margin: 0 auto;
}

footer {
  text-align: center;
}


/* Default styling for all screens ends here */

/* Add media query for tablet */
@media only screen and (min-width: 38em){
  header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .wrapper {
    min-width: 500px;
    max-width: 800px;
    margin: 0 auto;
  }

  .img34 {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .content1 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
  }

  .title {
    grid-column: 1;
    grid-row: 1;
  }

  .img1 {
    grid-row: 1 / 3;
  }

  .info {
    grid-column: 1;
    grid-row: 2;
  }

  .description {
    grid-column: 1 / -1;
  }

  .button {
    grid-column: 2;
    grid-row: 3;
  }

  .content2 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 1rem;
    margin-top: 1rem;
  }

  .img2 {
    grid-column: 1;
    grid-row: 1 / -1;
  }

  .details {
    grid-column: 2 / -1;
    grid-row: 1 / -1;
  }

  .included {
    padding-top: 3rem;
    grid-column: 1 / -1;
    grid-row: 2;
  }

  .content3 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 1rem;
    margin-top: 1rem;
  }

.names {
  grid-column: 1;
}

  .img34 {
    grid-column: 2 / -1;
  }

  .browsed {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .reviews {
    grid-template-columns: 1fr 1fr;
  }

  /* Add media query for desktop */
  @media only screen and (min-width: 75em){
    header {
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
    }

    .wrapper {
      min-width: 1080px;
      max-width: 1400px;
      margin: 0 auto;
    }

    .content1 {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: repeat(auto-fit, minmax(4, 1fr));
      gap: 1rem;
    }

    .img1 {
      grid-row: 1 / 4;
      grid-column: 2 / -1;
    }

    .info {
      grid-column: 1;
      grid-row: 2;
    }

    .description {
      grid-column: 1;
      grid-row: 3;
    }

    .button {
      grid-column: 2 / -1;
      grid-row: 4;
    }

    .content2 {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      gap: 1rem;
      margin-top: 1rem;
    }

    .img2 {
      grid-column: 1;
      grid-row: 1 / -1;
    }

    .details {
      grid-column: 2 / -1;
      grid-row: 1 / -1;
    }

    .included {
      padding-top: 3rem;
      grid-column: 2 / -1;
      grid-row: 2;
    }

    .content3 {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr;
      gap: 1rem;
      margin-top: 1rem;
    }

  .names {
    grid-column: 1;
  }

  .img34 {
    grid-column: 2 / -1;
    position: center;
    repeat: no-repeat;
    size: cover;
    width: 100%;
    height: 50%;
    margin: 0;
  }

    .browsed {
      grid-template-columns: 1fr 1fr 1fr 1fr;
    }

    .reviews {
      grid-template-columns: 1fr 1fr 1fr;
    }
  }

